Bug 1387090 - Properly handle DontThrottle flag in all places in nsHttpTransaction. r=mcmanus